2000-07-23  Richard Frith-Macdonald <rfm@gnu.org>

	Old DO code removed along with associated libObjects classes that it
	required - library slimmed down.

2000-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGCString.m: implement methods to get numeric values.
	* Source/NSGString.m: implement methods to get numeric values.

2000-07-19  Adam Fedor  <fedor@gnu.org>

	* Documentation/news.tmpl.texi: Update.
	* Documentation/todo.tmpl.texi: Update.

2000-07-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/Makefile.postamble: Improve warning messages for gdomap install
	* Source/NSProcessInfo.m: Change __MINGW32__ to __MINGW__
	* Source/GSTcpPort.m: improve encoding of local port for send over wire

2000-07-17  Adam Fedor  <fedor@gnu.org>

	* Source/NSZone.m: Remove duplicate function definitions (when 
	GS_WITH_GC is 1) already defined in NSZone.h.

2000-07-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/externs.m: Some evil casts to avoid compiler warnings about
	assigning to constant variables when we initiallise them.
	* Source/NSGSet.m: implemented [-anyObject] and [-allObjects]
	* Source/NSSet.m: Fix to encode subclasses as abstract class.
	Remove unused methods for set/get concrete class
	* Source/NSCountedSet.m: ditto
	* Source/NSNumber.m: Use explicitly signed types for portability -
	particularly for systems (eg PPC) where char is not signed by default.
	* Source/NSConcrete.m: ditto.
	* Source/NSConcreteNumber.m: ditto.
	* Source/Foundation/NSValue.h: ditto
	* Source/Foundation/NSConcreteNumber.h: ditto
	* Source/NSArray.m: Remove unused methods for set/get concrete class
	* Source/NSDictionary.m: ditto.
	* Source/NSString.m: ditto.
	* Source/NSAttributedString.m: ditto.
	* Source/NSHost.m: store names and addresses in sets for improved
	performance (comparisons).
	Encode host as an address other than loopback if possible.
	Add code for a new '+localHost' method to try to get ALL
	names/addresses of current host.