@@ -1,3 +1,8 @@
+2000-07-24  Richard Frith-Macdonald <rfm@gnu.org>
+
+	Testing directory tidied to reflect removal of old classes.
+	* Source/NSTimer.m: Tidied a little.
+
 2000-07-23  Richard Frith-Macdonald <rfm@gnu.org>
 
 	Old DO code removed along with associated libObjects classes that it
